# egobot-reason

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
assets/: .gitkeep
src/: cli.py
src/core/: action_planner.py  cosmos_client.py  reasoning_engine.py  video_processor.py
src/evaluation/: benchmark.py
src/prompts/: action_planning.py  safety_assesment.py  social_reasoning.py  spatial_reasoning.py
src/utils/: helpers.py
tests/: sample_cases.json  test_reasoning.py
web/: index.html
